2009-03-28  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Check ASAP whether the uri provided by the user points to a valid
	svn repository.
	
2009-03-27  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:

	Optimize the action_files view by removing an unneeded join.
	
2009-03-26  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FileTypes.py:

	Use 'not exists' instead of 'not in' which gives little better
	performance.
	
2009-03-26  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Split the file_links query into two different queries which
	drastically improves the performance.
	
2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/Cache.py: Removed
	* pycvsanaly2/extensions/CommitsLOC.py:

	Rework the CommitsLOC extension. For svn and git repos, the lines
	added/removed per commit can be get from the log, so we can just
	parse again to extract such data. It's much faster and reliable.
	
2009-03-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore what git clone command sends to stderr.
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/file_types.py:

	Add more types
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Add pkg-config support to setup.py script and use it to check
	whether the required repository handler version is installed.
	
2009-03-24  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Document the new -n, --no-parse command line option
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/cvsanaly2.1:
	* pycvsanaly2/Config.py:
	* pycvsanaly2/main.py:

	Add a command line option (-n, --no-parse) to be able to skip the
	parsing process when used in conjunction with --extensions.
	